--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Teodor Bozhikov",
   "license": "ISC",
   "dependencies": {
+    "sequelize": "^6.19.0",
+    "sqlite3": "^5.0.6",
     "web3": "^1.7.3"
+  },
+  "devDependencies": {
+    "config": "^3.3.7"
   }
 }
