--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "node ./src/worker/index.js"
+    "start-dev": "node ./src/worker/index.js",
+    "npm-rebuild": "npm rebuild"
   },
   "author": "Teodor Bozhikov",
   "license": "ISC",
   "dependencies": {
     "sequelize": "^6.19.0",
-    "sqlite3": "^5.0.6",
     "web3": "^1.7.3"
   },
   "devDependencies": {
-    "config": "^3.3.7"
+    "config": "^3.3.7",
+    "sqlite3": "^5.0.7"
   }
 }
