add CRUD APIs for configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,22 @@
         {
             "type": "pwa-node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Launch Worker",
             "skipFiles": [
                 "<node_internals>/**"
             ],
             "preLaunchTask":"npm: npm-rebuild",
             "program": "${workspaceFolder}/src/worker/index.js"
+        },
+        {
+            "type": "pwa-node",
+            "request": "launch",
+            "name": "Launch API",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "preLaunchTask":"npm: npm-rebuild",
+            "program": "${workspaceFolder}/src/api/index.js"
         }
     ]
 }
