--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "node ./src/worker/index.js",
+    "start-dev": "node ./src/worker/index.js && node ./src/api/index.js",
+    "start-api": "node ./src/api/index.js",
+    "start-worker": "node ./src/worker/index.js",
     "npm-rebuild": "npm rebuild"
   },
   "author": "Teodor Bozhikov",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "sequelize": "^6.19.0",
     "web3": "^1.7.3"
   },
